fixed alignment on desktop

--- a/src/components/CurrentUser.scss
+++ b/src/components/CurrentUser.scss
@@ -1,5 +1,10 @@
-.TeamSelection {
+.CurrentUser {
+}
 
+.TeamSelection {
+  width: 420px;
+  display: block;
+  margin: auto;
 }
 
 .TeamSelection__heading {
